# vonage-rust

./: Cargo.toml  README.md  example.env
src/: main.rs
src/number_insights/: insights.rs
src/request/: vonageRequest.rs
src/sms/: OutboundSms.rs  SmsResponse.rs
src/verify/: check_verify.rs  start_verify.rs  start_verify_response.rs
